[package]
name = "estimate_size"
version = "0.1.1"
edition = "2024"
authors = ["menon-codes <ad.menon.dev@gmail.com>"]
license = "MIT"
description = "Replaces an iterator's `size_hint` with a custom value."
readme = "README.md"
keywords = ["iterator", "data-structure"]
categories = ["rust-patterns"]


[dependencies]
