[package]
name = "estimate_size"
version = "0.1.2"
edition = "2024"
authors = ["menon-codes <ad.menon.dev@gmail.com>"]
license = "MIT"
description = "Replaces an iterator's `size_hint` with a custom value."
readme = "README.md"
keywords = ["iterator", "data-structure"]
categories = ["rust-patterns"]
exclude = [
	"benches/*",
	"target/*",
	".git/*"
]

[dependencies]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "simple"
harness = false
